Fix for images wrapped by labels elements in IE 11

--- a/normalize.css
+++ b/normalize.css
@@ -422,3 +422,14 @@ textarea {
 optgroup {
   font-weight: bold;
 }
+
+/**
+ * Labels wrapping form elements containing images break ability to select
+ * form element in IE 11
+ */
+label {
+  display: inline-block;
+}
+label img {
+  pointer-events: none;
+}
